# cuda-samples

v10.1/: Samples_vs2012.sln  Samples_vs2013.sln  Samples_vs2015.sln  Samples_vs2017.sln
v10.1/0_Simple/UnifiedMemoryStreams/: UnifiedMemoryStreams_vs2012.sln  UnifiedMemoryStreams_vs2012.vcxproj  UnifiedMemoryStreams_vs2013.vcxproj  UnifiedMemoryStreams_vs2015.vcxproj  UnifiedMemoryStreams_vs2017.vcxproj
v10.1/0_Simple/asyncAPI/: asyncAPI_vs2012.vcxproj  asyncAPI_vs2013.vcxproj  asyncAPI_vs2015.vcxproj  asyncAPI_vs2017.vcxproj
v10.1/0_Simple/cdpSimplePrint/: cdpSimplePrint_vs2012.vcxproj  cdpSimplePrint_vs2013.sln  cdpSimplePrint_vs2013.vcxproj  cdpSimplePrint_vs2015.vcxproj  cdpSimplePrint_vs2017.vcxproj
v10.1/0_Simple/cdpSimpleQuicksort/: cdpSimpleQuicksort_vs2012.sln  cdpSimpleQuicksort_vs2012.vcxproj  cdpSimpleQuicksort_vs2013.vcxproj  cdpSimpleQuicksort_vs2015.sln  cdpSimpleQuicksort_vs2015.vcxproj  cdpSimpleQuicksort_vs2017.vcxproj
v10.1/0_Simple/clock/: clock_vs2012.vcxproj  clock_vs2013.vcxproj  clock_vs2015.vcxproj  clock_vs2017.vcxproj
v10.1/0_Simple/clock_nvrtc/: clock_nvrtc_vs2012.sln  clock_nvrtc_vs2012.vcxproj  clock_nvrtc_vs2013.sln  clock_nvrtc_vs2013.vcxproj  clock_nvrtc_vs2015.sln  clock_nvrtc_vs2015.vcxproj  clock_nvrtc_vs2017.vcxproj
v10.1/0_Simple/cppIntegration/: cppIntegration_vs2012.sln  cppIntegration_vs2012.vcxproj  cppIntegration_vs2013.vcxproj  cppIntegration_vs2015.vcxproj  cppIntegration_vs2017.vcxproj
v10.1/0_Simple/cppOverload/: cppOverload_vs2012.vcxproj  cppOverload_vs2013.vcxproj  cppOverload_vs2015.vcxproj  cppOverload_vs2017.vcxproj
v10.1/0_Simple/cudaOpenMP/: cudaOpenMP_vs2012.vcxproj  cudaOpenMP_vs2013.vcxproj  cudaOpenMP_vs2015.vcxproj  cudaOpenMP_vs2017.vcxproj
v10.1/0_Simple/cudaTensorCoreGemm/: cudaTensorCoreGemm_vs2012.vcxproj  cudaTensorCoreGemm_vs2013.vcxproj  cudaTensorCoreGemm_vs2015.vcxproj  cudaTensorCoreGemm_vs2017.vcxproj
v10.1/0_Simple/fp16ScalarProduct/: fp16ScalarProduct_vs2012.vcxproj  fp16ScalarProduct_vs2013.vcxproj  fp16ScalarProduct_vs2015.vcxproj  fp16ScalarProduct_vs2017.vcxproj
v10.1/0_Simple/immaTensorCoreGemm/: immaTensorCoreGemm_vs2012.vcxproj  immaTensorCoreGemm_vs2013.vcxproj  immaTensorCoreGemm_vs2015.vcxproj  immaTensorCoreGemm_vs2017.vcxproj
v10.1/0_Simple/inlinePTX/: inlinePTX_vs2012.vcxproj  inlinePTX_vs2013.vcxproj  inlinePTX_vs2015.sln  inlinePTX_vs2015.vcxproj  inlinePTX_vs2017.vcxproj
v10.1/0_Simple/inlinePTX_nvrtc/: inlinePTX_nvrtc_vs2012.vcxproj  inlinePTX_nvrtc_vs2013.vcxproj  inlinePTX_nvrtc_vs2015.vcxproj  inlinePTX_nvrtc_vs2017.vcxproj  readme.txt
v10.1/0_Simple/matrixMul/: matrixMul.cu  matrixMul_vs2012.vcxproj  matrixMul_vs2013.vcxproj  matrixMul_vs2015.vcxproj  matrixMul_vs2017.vcxproj
v10.1/0_Simple/matrixMulCUBLAS/: matrixMulCUBLAS_vs2012.sln  matrixMulCUBLAS_vs2012.vcxproj  matrixMulCUBLAS_vs2013.vcxproj  matrixMulCUBLAS_vs2015.vcxproj  matrixMulCUBLAS_vs2017.vcxproj
v10.1/0_Simple/matrixMulDrv/: matrixMulDrv.cpp  matrixMulDrv_vs2012.vcxproj  matrixMulDrv_vs2013.vcxproj  matrixMulDrv_vs2015.vcxproj  matrixMulDrv_vs2017.vcxproj
v10.1/0_Simple/matrixMul_nvrtc/: matrixMul_nvrtc_vs2012.vcxproj  matrixMul_nvrtc_vs2013.sln  matrixMul_nvrtc_vs2013.vcxproj  matrixMul_nvrtc_vs2015.vcxproj  matrixMul_nvrtc_vs2017.vcxproj  readme.txt
v10.1/0_Simple/simpleAssert/: simpleAssert_vs2012.sln  simpleAssert_vs2012.vcxproj  simpleAssert_vs2013.sln  simpleAssert_vs2013.vcxproj  simpleAssert_vs2015.vcxproj  simpleAssert_vs2017.vcxproj
v10.1/0_Simple/simpleAssert_nvrtc/: simpleAssert_nvrtc_vs2012.vcxproj  simpleAssert_nvrtc_vs2013.sln  simpleAssert_nvrtc_vs2013.vcxproj  simpleAssert_nvrtc_vs2015.vcxproj  simpleAssert_nvrtc_vs2017.vcxproj
v10.1/0_Simple/simpleAtomicIntrinsics/: simpleAtomicIntrinsics_vs2012.vcxproj  simpleAtomicIntrinsics_vs2013.vcxproj  simpleAtomicIntrinsics_vs2015.vcxproj  (+1 more)
v10.2/: Samples_vs2012.sln  Samples_vs2013.sln  Samples_vs2015.sln  Samples_vs2017.sln  Samples_vs2019.sln
v11.0/: Samples_vs2012.sln  Samples_vs2013.sln  Samples_vs2015.sln  Samples_vs2017.sln  Samples_vs2019.sln
v12.0/: version.json
v12.0/compute-sanitizer/: EnableDebuggerInterface.bat
v12.0/include/: cooperative_groups.h  cublasLt.h  cublas_api.h  cuda.h  cudaTypedefs.h  cuda_bf16.h  cuda_bf16.hpp  cuda_fp8.h  cuda_fp8.hpp  cuda_runtime.h  cufft.h  cufftXt.h  curand.h  cusolver_common.h  cusparse.h  device_atomic_functions.h  npp.h  nppcore.h  nppdefs.h  nppi_arithmetic_and_logical_operations.h  nppi_filtering_functions.h  nvJitLink.h  nvjpeg.h  nvrtc.h  sm_20_atomic_functions.h  sm_30_intrinsics.h  sm_32_atomic_functions.h  sm_32_atomic_functions.hpp  sm_60_atomic_functions.h  sm_60_atomic_functions.hpp  sm_61_intrinsics.h
v12.0/libnvvm-samples/: CMakeLists.txt  README.txt
v12.0/libnvvm-samples/cuda-c-linking/: CMakeLists.txt  README.txt  cuda-c-linking.cpp  math-funcs.cu
v12.0/libnvvm-samples/ptxgen/: README.txt  ptxgen.c
v12.0/libnvvm-samples/simple/: CMakeLists.txt  simple-gpu64.ll  simple.c
v12.0/libnvvp/: .eclipseproduct  artifacts.xml  nvvp.ini
v12.0/res/: nvJitLink_win32.def
v8.0/: Samples_vs2010.sln  Samples_vs2012.sln  Samples_vs2013.sln  Samples_vs2015.sln
v8.0/include/: common_functions.h  cublas_api.h  cuda_d3d9_interop.h  cuda_fp16.h  cuda_gl_interop.h  cuda_occupancy.h  cuda_runtime.h  cuda_runtime_api.h  cufft.h  cufftXt.h  cufftw.h  curand.h  curand_mtgp32_host.h  curand_poisson.h  cusolverDn.h  cusolverSp.h  cusolverSp_LOWLEVEL_PREVIEW.h  cusolver_common.h  cusparse.h  cuviddec.h  device_atomic_functions.h  device_atomic_functions.hpp  device_double_functions.h  device_double_functions.hpp  device_functions.h  device_functions.hpp  device_functions_decls.h  driver_types.h  fatBinaryCtl.h  host_config.h  library_types.h  math_functions.h  math_functions.hpp  math_functions_dbl_ptx3.h  math_functions_dbl_ptx3.hpp  nppcore.h  nppdefs.h  nppi_arithmetic_and_logical_operations.h  nppi_color_conversion.h  nppi_compression_functions.h  (+29 more)
v9.0/: Samples_vs2010.sln  Samples_vs2012.sln  Samples_vs2013.sln  Samples_vs2015.sln  Samples_vs2017.sln
(+5142 files in other folders)
